crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__aetherling_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "ChangeZone",
        "origin": null,
        "destination": "Exile",
        "target": {
          "type": "SelfRef"
        },
        "owner_library": false,
        "enter_transformed": false,
        "enter_tapped": false,
        "enters_attacking": false
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "Blue"
          ],
          "generic": 0
        }
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "CreateDelayedTrigger",
          "condition": {
            "type": "AtNextPhase",
            "phase": "End"
          },
          "effect": {
            "kind": "Activated",
            "effect": {
              "type": "ChangeZone",
              "origin": "Exile",
              "destination": "Battlefield",
              "target": {
                "type": "ParentTarget"
              },
              "owner_library": false,
              "enter_transformed": false,
              "enter_tapped": false,
              "enters_attacking": false
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "sorcery_speed": false,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false,
            "sub_link": "SequentialSibling"
          },
          "uses_tracked_set": true
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "{U}: Exile ~. Return it to the battlefield under its owner's control at the beginning of the next end step.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "CantBeBlocked",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "AddStaticMode",
                "mode": "CantBeBlocked"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "can't be blocked"
          }
        ],
        "duration": "UntilEndOfTurn",
        "target": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "Blue"
          ],
          "generic": 0
        }
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "{U}: ~ can't be blocked this turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Pump",
        "power": {
          "type": "Fixed",
          "value": 1
        },
        "toughness": {
          "type": "Fixed",
          "value": -1
        },
        "target": {
          "type": "SelfRef"
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 1
        }
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "{1}: ~ gets +1/-1 until end of turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Pump",
        "power": {
          "type": "Fixed",
          "value": -1
        },
        "toughness": {
          "type": "Fixed",
          "value": 1
        },
        "target": {
          "type": "SelfRef"
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 1
        }
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "{1}: ~ gets -1/+1 until end of turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
