crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__ahn_crop_champion_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 145,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "You may exert ~ as it attacks. When you do, untap all other creatures you control. (An exerted creature won't untap during your next untap step.)"
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Exerted",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "SetTapState",
              "target": {
                "type": "Typed",
                "type_filters": [
                  "Creature"
                ],
                "controller": "You",
                "properties": [
                  {
                    "type": "Another"
                  }
                ]
              },
              "scope": {
                "type": "All"
              },
              "state": {
                "type": "Untap"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "You may exert ~ as it attacks. When you do, untap all other creatures you control.",
          "constraint": null,
          "condition": null,
          "batched": false
        }
      }
    }
  ],
  "source_text": "You may exert this creature as it attacks. When you do, untap all other creatures you control. (An exerted creature won't untap during your next untap step.)",
  "card_name": "Ahn-Crop Champion"
}
